# conservative-interpolation-FV-scheme-calculator

./: .gitignore  .pre-commit-config.yaml  README.md  classes.py  main.py  pre-commit-config.yaml  pyproject.toml  requirements.txt  script.py  test_interfaces.py  test_setup.py  test_x_derivative.py  todolist.txt
.github/workflows/: python-package.yml
src/: advection_solution.py  advection_solution_and_plot.py  build_reconstructions.py  fvscheme2.py  generate_schemes.py  lincom.py  main.py  multiple_orders.py  no_limiter_rk4.py  old_fvscheme.py  polynome.py  single_order.py  temp.py
src/util/: fvscheme.py  integrate.py  lincom.py  mathbasic.py  polynome.py  solve.py
src/util/reconstruction_schemes/: order2_left.csv  order2_right.csv  order3_left.csv  order3_right.csv  order4_left.csv  order4_right.csv  order5_l.csv  order5_left.csv  order5_r.csv  order5_right.csv  order6_l.csv  order6_left.csv  order6_r.csv  order6_right.csv  order7_l.csv  order7_left.csv  order7_right.csv  order8_left.csv  order8_right.csv  order9_left.csv  order9_right.csv
tests/: test_Fraction.py  test_Integrator.py  test_Interpolation.py  test_Kernel.py  test_Kernel2.py  test_Lagrange.py  test_Polynome.py  test_PolynomialReconstruction.py  test_Teyssier_solutions.py  test_mathbasic.py
