[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "src"
version = "0.1.0"
description = "Conservative Interpolation Finite Volume Scheme Generator"
authors = [
	{name = "Jonathan Palafoutas", email = "jpalafou@princeton.edu"}
	]
license = {file = "LICENSE"}
readme = "README.rst"
requires-python = ">=3.7"

[project.optional-dependencies]
test = [
	"pytest",
	"numpy"
]

[tool.black]
line-length = 79